<resources xmlns:tools="http://schemas.android.com/tools" xmlns:x="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_intro">Welcome</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok" tools:ignore="MissingTranslation">OK</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="select_all">Select all</string>
    <string name="select_none">Select none</string>
    <string name="goto_page">Go to page…</string>
    <string name="confirm">Confirm</string>
    <string name="please_wait">Please wait…</string>
    <plurals name="book" tools:ignore="ImpliedQuantity">
        <item quantity="one">book</item>
        <item quantity="other">books</item>
    </plurals>
    <plurals name="chapter" tools:ignore="ImpliedQuantity">
        <item quantity="one">chapter</item>
        <item quantity="other">chapters</item>
    </plurals>
    <plurals name="page" tools:ignore="ImpliedQuantity">
        <item quantity="one">page</item>
        <item quantity="other">pages</item>
    </plurals>
    <plurals name="file" tools:ignore="ImpliedQuantity">
        <item quantity="one">file</item>
        <item quantity="other">files</item>
    </plurals>
    <plurals name="item" tools:ignore="ImpliedQuantity">
        <item quantity="one">item</item>
        <item quantity="other">items</item>
    </plurals>
    <string name="groups">Groups</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="resume">Resume</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_all">Cancel all</string>
    <string name="reset">Reset</string>
    <string name="freeze">Toggle freeze</string>
    <string name="menu_completed_single">Mark as completed</string>
    <string name="menu_reset_read">Mark as unread</string>
    <string name="menu_rate">Rate</string>
    <string name="service_running">Service is already running</string>
    <string name="open_folder">Open folder</string>
    <string name="_default">default</string>
    <string name="empty">empty</string>
    <string name="none">None</string>
    <string name="help_generic">Help</string>
    <string name="actions_generic">Actions</string>
    <string name="enabled_generic">Enabled</string>
    <string name="disabled_generic">Disabled</string>
    <string name="create_generic">Create</string>
    <string name="edit_generic">Edit</string>
    <string name="remove_generic">Remove</string>
    <string name="invalid_selection_generic">Invalid selection</string>
    <string name="user_generic">User</string>
    <string name="copy_generic">Copy</string>
    <string name="picture_generic">Picture</string>
    <string name="white">White</string>
    <string name="light_grey">Light grey</string>
    <string name="dark_grey">Dark grey</string>
    <string name="black">Black</string>
    <string name="title_submenu_library">My Library</string>
    <string name="title_submenu_content">Content</string>
    <string name="title_submenu_settings">Advanced</string>
    <string name="title_activity_downloads">Library</string>
    <string name="title_activity_queue">Queue</string>
    <string name="title_activity_browser">Browser</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_app_lock">App Lock</string>
    <string name="title_activity_search">Advanced Search</string>
    <string name="title_activity_meta_edit">Edit metadata</string>
    <string name="title_activity_rules">Renaming rules</string>
    <string name="title_activity_storage">Storage management</string>
    <string name="refresh_step1">Primary folder</string>
    <string name="refresh_step1_2">Primary folder (location 2)</string>
    <string name="refresh_step1_external">External folder</string>
    <string name="refresh_step1_select">Select Primary folder</string>
    <string name="refresh_step1_select_2">Select Primary folder (location 2)</string>
    <string name="refresh_step1_select_external">Select external folder</string>
    <string name="refresh_step2">Scan site folders</string>
    <string name="refresh_step3_init">Scanning library…</string>
    <string name="refresh_step3">Scan library (<x:g example="1" id="number">%1$d</x:g> / <x:g example="7" id="total">%2$d</x:g>)</string>
    <string name="refresh_step3_nomax">Scan library (<x:g example="1" id="number">%1$d</x:g>)</string>
    <string name="refresh_step4_init">Importing queue…</string>
    <string name="refresh_select_folder">Please select an existing primary folder. Its location is displayed on screen.</string>
    <string name="refresh_allow_write">Please allow write permission</string>
    <string name="menu_search">Search</string>
    <string name="menu_fav">Toggle favourite filter</string>
    <string name="menu_mark_fav">Toggle favourite</string>
    <string name="menu_group_new">New group</string>
    <string name="menu_edit_order">Reorder</string>
    <string name="menu_edit_name">Rename</string>
    <string name="menu_edit_confirm">Confirm editing</string>
    <string name="menu_edit_cancel">Cancel editing</string>
    <string name="menu_edit_warning_custom">New custom ordering will overwrite the previous one.</string>
    <string name="menu_sort_filter">Sort and filter</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_delete_single">Delete</string>
    <string name="menu_change_group">Move to group</string>
    <string name="menu_open_folder">Open containing folder</string>
    <string name="menu_redownload">Redownload</string>
    <string name="menu_storage_method">Storage method</string>
    <string name="menu_redownload_scratch">Redownload from scratch</string>
    <string name="menu_download_streamed">Download</string>
    <string name="menu_select_all">Select All</string>
    <string name="menu_share">Share</string>
    <string name="menu_share_help">Share book URL and title using another app</string>
    <string name="menu_share_title">Book URL</string>
    <string name="menu_export">Export</string>
    <string name="menu_archive_help">Export books as archives or PDFs</string>
    <string name="library_search_hint">Title, artist, tag or book ID</string>
    <string name="group_search_hint">Group title</string>
    <string name="send_to">Share with:</string>
    <string name="open_settings">Open settings</string>
    <string name="app_settings">App settings</string>
    <string name="book_settings">Book settings</string>
    <string name="alert_browser_mode">Browser mode active : no storage access</string>
    <string name="alert_low_memory">Your device is low on storage!</string>
    <string name="alert_low_memory_db">The GalleryCherry database is low on storage!\nPlease backup and remove books.</string>
    <string name="alert_permissions_lost">File permissions have been lost</string>
    <string name="alert_notifications">Notifications are disabled!</string>
    <string name="fix_permissions">Fix</string>
    <string name="view_queue">View queue</string>
    <string name="clear_search_history">Clear search history</string>
    <string name="downloader_title">Downloader</string>
    <string name="queue_queue_tab">In progress</string>
    <string name="queue_errors_tab">Errors</string>
    <plurals name="ask_cancel_multiple" tools:ignore="impliedQuantity">
        <item quantity="one">Cancel the selected item\?</item>
        <item quantity="other">Cancel the selected items\?</item>
    </plurals>
    <string name="invert_queue">Invert queue</string>
    <string name="limit_download">Limit mobile data</string>
    <string name="redownload_all">Redownload all</string>
    <string name="cancel_all_errors">Cancel all errors</string>
    <string name="import_downloads">Import downloads</string>
    <string name="move_top">Move to top</string>
    <string name="move_bottom">Move to bottom</string>
    <string name="queue_paused">Queue paused</string>
    <string name="queue_preparing">Preparing download</string>
    <string name="queue_dl">Downloading <x:g example="Cool H-Manga" id="book_name">%s</x:g></string>
    <string name="queue_dl_single_file">Downloading large file</string>
    <string name="err_stats_title">Error stats</string>
    <string name="err_stats_help">Show detailed stats about current download errors</string>
    <string name="err_no_content">Book does not exist yet</string>
    <string name="confirm_cancel_all">Cancel the whole queue\?</string>
    <plurals name="confirm_cancel_all_errors" tools:ignore="MissingQuantity">
        <item quantity="other">Cancel all <x:g example="42" id="count">%d</x:g> books with errors\?</item>
    </plurals>
    <plurals name="confirm_redownload_all" tools:ignore="MissingQuantity">
        <item quantity="other">Redownload <x:g example="42" id="count">%d</x:g> items\?</item>
    </plurals>
    <string name="paused_no_internet">Cannot download - No Internet</string>
    <string name="paused_no_wifi">Cannot download - No Wi-Fi</string>
    <string name="paused_no_storage">Cannot download - Low on storage (<x:g example="0 bytes" id="size_left_bytes">%s</x:g> left). Free space or change download folder location</string>
    <string name="paused_no_dl_folder">Cannot download - No download folder. Use app settings to select one</string>
    <string name="paused_dl_folder_not_found">Cannot download - Download folder not found. Use app settings to select one</string>
    <string name="paused_dl_folder_credentials">Cannot download - Insufficient credentials on download folder. Use app settings to reselect it</string>
    <string name="paused_dl_stale_online_credentials">Cannot download - Stale Cookies or credentials. Use the notification to regenerate them</string>
    <string name="paused_dl_no_available_downloads">No available downloads remaining</string>
    <string name="paused_dl_mobile_limit_reached">Mobile download data limit reached</string>
    <string name="step_init">Initializing</string>
    <string name="step_prepare_img">Preparing images</string>
    <string name="step_fetch_img">Fetching images</string>
    <string name="step_prepare_folder">Preparing download folder</string>
    <string name="step_prepare_download">Preparing download chain</string>
    <string name="step_save_queue">Saving queue</string>
    <string name="step_wait_purge">Waiting for purge to complete</string>
    <string name="step_start_download">Download chain started!</string>
    <string name="step_complete_download">Completing download</string>
    <string name="step_remove_duplicate">Replacing duplicate</string>
    <string name="limit_download_limit_current">Current limit : %s / %s</string>
    <string name="limit_download_set_new">Change limit</string>
    <string name="limit_download_limit_caption">NB : This setting will reset when the app restarts</string>
    <string name="range_download_prompt">Range to download</string>
    <string name="range_caption" tools:ignore="TypographyDashes">Available syntax : 1-5 / 1;3;8 / 1-2;5-7</string>
    <string name="transform_unlock_values">Unlock value caps</string>
    <string name="transform_download_settings">Download settings</string>
    <string name="transform_resize_enable">Resize media</string>
    <string name="method">Method</string>
    <string name="resize_method_1_prompt">% of screen dimensions</string>
    <string name="resize_method_2_prompt_max_height">Max height (mangas)</string>
    <string name="resize_method_2_prompt_max_width">Max width (manhwas, webtoons)</string>
    <string name="resize_method_3_prompt">% of original size</string>
    <string name="resize_method_5_prompt">Number of images per chapter</string>
    <string name="encoder">Encoder</string>
    <string name="encoder_lossless">Lossless encoder</string>
    <string name="encoder_lossy">Lossy encoder</string>
    <string name="encoder_quality">Quality</string>
</resources>