<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_errors_queue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".activities.TransformActivity">

    <me.devsaki.hentoid.views.ListPickerView
        android:id="@+id/transcode_method"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:entries="@array/transcode_method_entries"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/method" />

    <me.devsaki.hentoid.views.ListPickerView
        android:id="@+id/encoder_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/transcode_method"
        app:title="@string/encoder" />

    <me.devsaki.hentoid.views.ListPickerView
        android:id="@+id/encoder_lossless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/encoder_all"
        app:title="@string/encoder_lossless" />

    <me.devsaki.hentoid.views.ListPickerView
        android:id="@+id/encoder_lossy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/encoder_lossless"
        app:title="@string/encoder_lossy" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/encoder_quality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/encoder_quality"
        android:visibility="gone"
        app:counterMaxLength="3"
        app:layout_constraintTop_toBottomOf="@id/encoder_lossy">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="flagNoPersonalizedLearning"
            android:inputType="number"
            android:textCursorDrawable="@null" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
