<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="start"
    android:padding="16dp"
    android:theme="@style/Theme.Light.DialogFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/limit_download"
        android:textSize="@dimen/text_header_6"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/limit_download_limit_current"
        android:textSize="@dimen/text_body_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/bar"
        style="@style/Widget.Material3.LinearProgressIndicator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/reset"
        app:layout_constraintTop_toBottomOf="@id/details" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reset"
        style="?attr/materialIconButtonFilledTonalStyle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:tooltipText="@string/pref_cat_library"
        app:icon="@drawable/ic_cancel"
        app:layout_constraintBottom_toBottomOf="@id/bar"
        app:layout_constraintStart_toEndOf="@id/bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/bar"
        tools:ignore="ContentDescription" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/set_new_btn"
        style="@style/Widget.Material3.Button.TonalButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/limit_download_set_new"
        app:icon="@drawable/ic_edit_square"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reset" />

    <TextView
        android:id="@+id/caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/limit_download_limit_caption"
        android:textSize="@dimen/caption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/set_new_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>
